# hero-studio

./: .gitignore  .travis.yml  Cargo.toml  LICENSE  README.md
app-electron/: package.json  tsconfig.json  tslint.json  webpack.config.js
app-electron/src/: App.css  App.tsx  StatusBar.css  StatusBar.tsx  ToolBar.css  ToolBar.tsx  Workspace.css  Workspace.js  gui.tsx  main.ts  style.scss  tsd.d.ts
app-native/: Cargo.toml  studio.toml
app-native/src/: audio.rs  main.rs
app-native/src/midi/: coremidi.rs  mod.rs  portmidi.rs
app-server/: Cargo.toml  app.toml  log4rs.yaml  studio.toml
app-server/src/: audio.rs  config.rs  controller.rs  events.rs  main.rs  realtime.rs  realtime_thread.rs  server.rs  studio_workers.rs  worker.rs  workers.rs
app-server/src/audio/: callback.rs  io.rs  mod.rs
app-server/src/audio/drivers/: mod.rs  portaudio.rs
app-server/src/midi/: coremidi.rs  endpoints.rs  io.rs  mod.rs  output.rs  portmidi.rs
app-server/src/midi/drivers/: coremidi.rs  mod.rs  portmidi.rs
app-server/src/midi/io/: mod.rs
core/: Cargo.toml
core/src/: color.rs  config.rs  lib.rs  metronome.rs  pool.rs  song.rs  studio.rs  transport.rs
core/src/audio/: buffer.rs  mod.rs  protocol.rs
core/src/midi/: buffer.rs  bus.rs  decoder.rs  encoder.rs  io.rs  messages.rs  mod.rs  types.rs
core/src/song/: clip.rs  events.rs  io.rs  metronome.rs  mod.rs  time.rs  track.rs  transport.rs
core/src/song/clip/: audio.rs  notes.rs
core/src/song/clips/: audio.rs  mod.rs  pianoroll.rs
core/src/song/time/: bars.rs  (+1 more)
core/src/time/: bars.rs  clock.rs  mod.rs  signature.rs  tempo.rs  ticks.rs
(+11 files in other folders)
