[package]
name = "app-native"
version = "0.1.0"
authors = ["Christian Perez-Llamas"]
edition = "2018"

[dependencies]
hero-studio-core = { path = "../core" }

failure = "0.1.3"
failure_derive = "*"
coremidi = { git = "https://github.com/chris-zen/coremidi.git", branch = "packet-buffer-with-capacity" }
portaudio = "0.7.0"